CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_EXCPT__c.object
<CustomObject>
    <description>Logging for failed applications?</description>
    <fields>
        <fullName>CDE_TYPE_EXCPT__c</fullName>
        <description>CDE_TYPE_EXCPT</description>
        <label>CDE_TYPE_EXCPT</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IDN_APPLN</description>
        <label>IDN_APPLN</label>
        <referenceTo>T_APPLN_CASE__c</referenceTo>
        <relationshipLabel>Application Process Exception</relationshipLabel>
        <relationshipName>Application_case_25</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAM_ENTITY_EXCPT__c</fullName>
        <description>NAM_ENTITY_EXCPT</description>
        <label>NAM_ENTITY_EXCPT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_PRCS_EXCPT__c</fullName>
        <description>NAM_PRCS_EXCPT</description>
        <label>NAM_PRCS_EXCPT</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_SEQ_EXCPT__c</fullName>
        <description>NBR_SEQ_EXCPT</description>
        <label>NBR_SEQ_EXCPT</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TXT_DESC_EXCPT_BUSNS__c</fullName>
        <description>TXT_DESC_EXCPT_BUSNS</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>TXT_DESC_EXCPT_BUSNS</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TXT_DESC_EXCPT_SYSTEM__c</fullName>
        <description>TXT_DESC_EXCPT_SYSTEM</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>TXT_DESC_EXCPT_SYSTEM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Application Process Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APRCS_EXCPT-{0}</displayFormat>
        <label>Application Process Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Process Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>